--- a/config.toml
+++ b/config.toml
@@ -20,5 +20,6 @@ header_nav = [
     { name = "~Home", url = "/" },
     { name = "#Projects", url = "/projects" },
     { name = "$Hobbies", url = "/hobbies" },
+    { name = "!Resume", url = "/resume" },
 #    { name = "?about", url = "/about" },
 ]
